B-F Sandbox Full-Backup/src/objects/Market__c.object
<CustomObject>
    <description>Used by CRM.
NPA Rollout: Used to store Markets at State Level.</description>
    <fields>
        <fullName>Evaluator_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluator 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluator 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluator_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Evaluator 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Innovation_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Innovation Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Markets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Code__c</fullName>
        <description>Used to store technical code for respective markets</description>
        <externalId>true</externalId>
        <label>Market Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Channel__c</fullName>
        <description>This field is used by the Outlet Visit page to determine what grid-layout to use in the B-F and Competitor Brands sections. This Off Channel references the value selected in the related Account.Channel__c field value.</description>
        <inlineHelpText>Used by the Outlet Visit page to determine what grid-layout to use in the B-F and Competitor Brands sections. This &quot;Off Channel&quot; references the value in the related Account.Channel__c field value.
1-Standard Layout
2-Euro Off
3-Euro On</inlineHelpText>
        <label>Off Channel</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Channel__c</fullName>
        <description>This field is used by the Outlet Visit page to determine what grid-layout to use in the B-F and Competitor Brands sections. This On Channel references the value selected in the related Account.Channel__c field value.</description>
        <inlineHelpText>Used by the Outlet Visit page to determine what grid-layout to use in the B-F and Competitor Brands sections. This &quot;On Channel&quot; references the value in the related Account.Channel__c field value.
1-Standard Layout
2-Euro Off
3-Euro On</inlineHelpText>
        <label>On Channel</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Market_Code__c</fullName>
        <description>Used to display the code for the parent market</description>
        <formula>Parent_Market__r.Market_Code__c</formula>
        <label>Parent Market Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the immediate parent of the market e.g. California will have Unites States as the parent</description>
        <label>Parent Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Markets</relationshipLabel>
        <relationshipName>Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>